--- a/requirements.txt
+++ b/requirements.txt
@@ -48,9 +48,14 @@ service-identity==24.1.0
 six==1.16.0
 sqlparse==0.5.0
 twilio==9.1.0
+Twisted==24.3.0
+txaio==23.1.1
+typing_extensions==4.12.0
+tzdata==2024.1
 urllib3==2.2.1
 whitenoise==6.6.0
 yarl==1.9.4
 zope.interface==6.4.post2
+
 
 gunicorn==20.0.4
